--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -16,6 +16,11 @@
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": false,
     "strictBindCallApply": false,
-    "noFallthroughCasesInSwitch": false
-  }
+    "noFallthroughCasesInSwitch": false,
+    "typeRoots": [
+      "node_modules/@types",
+      "src/types"
+    ],
+  },
+  "include": ["src/**/*.ts", "src/**/*.d.ts"]
 }
