--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
     "firebase": "^11.6.1",
     "next": "15.3.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "recharts": "^2.15.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
