--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
@@ -17,7 +18,15 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "serve": "npm run build && firebase emulators:start --only functions",
+    "shell": "npm run build && firebase functions:shell",
+    "deploy": "firebase deploy --only functions",
+    "logs": "firebase functions:log"
+  },
+  "main": "dist/index.js",
+  "engines": {
+    "node": "20"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
@@ -32,10 +41,12 @@
     "class-validator": "^0.14.1",
     "dotenv": "^16.5.0",
     "firebase-admin": "^13.3.0",
+    "firebase-functions": "^6.3.2",
     "passport": "^0.7.0",
     "passport-http-bearer": "^1.0.1",
     "pg": "^8.15.6",
     "reflect-metadata": "^0.2.2",
+    "rimraf": "^6.0.1",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.22"
   },
